vlib/v/checker/tests/store_string_err.vv
fn return_err() ?int {
	return error('')
}

err := return_err() or { err }
eprintln(err)
